[package]
name = "wstcpproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
http-body-util = "0.1.3"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
zerocopy = "0.8.27"
